# controllers/user_controller.go
@@ -7,6 +7,13 @@ import (
 	"github.com/lucasdk3/maui-oqcomer-api/services"
 )
 
+// @Summary set user
+// @Tags    user
+// @Router  /user [post]
+// @Accept 	json
+// @Param   payload   body    models.User    true  "Dados do usuário"
+// @Success 204           {object} models.User
+// @Failure 400
 func CreateUser(c *gin.Context) {
 	db := database.GetDatabase()
 
@@ -25,10 +32,44 @@ func CreateUser(c *gin.Context) {
 	err = db.Create(&p).Error
 	if err != nil {
 		c.JSON(400, gin.H{
-			"error": "cannot create book: " + err.Error(),
+			"error": "cannot create user: " + err.Error(),
 		})
 		return
 	}
 
 	c.Status(204)
+}
+
+// @Summary get user
+// @Tags    user
+// @Router  /user [get]
+// @Accept 	json
+// @Success 200           {object} models.User
+// @Failure 400
+// @Security BearerAuth
+func GetUser(c *gin.Context) {
+	const Bearer_schema = "Bearer "
+	header := c.GetHeader("Authorization")
+
+	tokenString := header[len(Bearer_schema):]
+	userId, err := services.JWTService().GetJWTClaim(tokenString)
+	if err != nil {
+		c.JSON(400, gin.H{
+			"error": "User is invalid",
+		})
+		return
+	}
+
+	db := database.GetDatabase()
+	var p models.User
+	err = db.First(&p, userId).Error
+
+	if err != nil {
+		c.JSON(400, gin.H{
+			"error": "cannot find user by id: " + err.Error(),
+		})
+		return
+	}
+
+	c.JSON(200, p)
 }
