# models/user.go
@@ -8,8 +8,8 @@ import (
 
 type User struct {
 	ID        uint           `json:"id" gorm:"primaryKey"`
-	Username  string         `json:"username"`
-	Pin       string         `json:"pin"`
+	Username  string         `json:"username" validate:"required"`
+	Pin       string         `json:"pin" validate:"required"`
 	CreatedAt time.Time      `json:"created"`
 	UpdatedAt time.Time      `json:"updated"`
 	DeletedAt gorm.DeletedAt `gorm:"index" json:"deleted"`
